crates/rglint-core/src/selector/snapshots/rglint_core__selector__tests__snapshot_child_chain.snap
---
source: crates/rglint-core/src/selector/tests.rs
expression: "parse(\"ObjectTypeDefinition > FieldDefinition > Name\").unwrap()"
---
Child(
    Child(
        Kind(
            "ObjectTypeDefinition",
        ),
        Kind(
            "FieldDefinition",
        ),
    ),
    Kind(
        "Name",
    ),
)
