crates/rglint-core/src/selector/snapshots/rglint_core__selector__tests__snapshot_compound_kind_and_two_filters.snap
---
source: crates/rglint-core/src/selector/tests.rs
expression: "parse(\"FieldDefinition[name.value=/^_/]:not(FieldDefinition)\").unwrap()"
---
Not(
    [
        Not(
            [
                Kind(
                    "FieldDefinition",
                ),
            ],
        ),
        Not(
            [
                Attribute {
                    target: NameValue,
                    op: RegexMatch,
                    value: Regex(
                        Regex(
                            "^_",
                        ),
                    ),
                },
            ],
        ),
        Not(
            [
                Not(
                    [
                        Kind(
                            "FieldDefinition",
                        ),
                    ],
                ),
            ],
        ),
    ],
)
