crates/rglint-core/src/selector/snapshots/rglint_core__selector__tests__snapshot_descendant_with_child_right.snap
---
source: crates/rglint-core/src/selector/tests.rs
expression: "parse(\"ObjectTypeDefinition > FieldDefinition[name.value=/^_/] Name\").unwrap()"
---
Descendant(
    Child(
        Kind(
            "ObjectTypeDefinition",
        ),
        Not(
            [
                Not(
                    [
                        Kind(
                            "FieldDefinition",
                        ),
                    ],
                ),
                Not(
                    [
                        Attribute {
                            target: NameValue,
                            op: RegexMatch,
                            value: Regex(
                                Regex(
                                    "^_",
                                ),
                            ),
                        },
                    ],
                ),
            ],
        ),
    ),
    Kind(
        "Name",
    ),
)
