crates/rglint-core/src/selector/snapshots/rglint_core__selector__tests__snapshot_field_with_name_regex.snap
---
source: crates/rglint-core/src/selector/tests.rs
expression: "parse(\"FieldDefinition[name.value=/^_/]\").unwrap()"
---
Not(
    [
        Not(
            [
                Kind(
                    "FieldDefinition",
                ),
            ],
        ),
        Not(
            [
                Attribute {
                    target: NameValue,
                    op: RegexMatch,
                    value: Regex(
                        Regex(
                            "^_",
                        ),
                    ),
                },
            ],
        ),
    ],
)
