crates/rglint-core/src/selector/snapshots/rglint_core__selector__tests__snapshot_matches_object_or_interface.snap
---
source: crates/rglint-core/src/selector/tests.rs
expression: "parse(\":matches(ObjectTypeDefinition, InterfaceTypeDefinition)\").unwrap()"
---
Matches(
    [
        Kind(
            "ObjectTypeDefinition",
        ),
        Kind(
            "InterfaceTypeDefinition",
        ),
    ],
)
