crates/rglint-core/src/selector/snapshots/rglint_core__selector__tests__snapshot_not_field_definition.snap
---
source: crates/rglint-core/src/selector/tests.rs
expression: "parse(\":not(FieldDefinition)\").unwrap()"
---
Not(
    [
        Kind(
            "FieldDefinition",
        ),
    ],
)
