crates/rglint-core/src/selector/snapshots/rglint_core__selector__tests__snapshot_object_type_child_field.snap
---
source: crates/rglint-core/src/selector/tests.rs
expression: "parse(\"ObjectTypeDefinition > FieldDefinition\").unwrap()"
---
Child(
    Kind(
        "ObjectTypeDefinition",
    ),
    Kind(
        "FieldDefinition",
    ),
)
