crates/rglint-core/src/selector/snapshots/rglint_core__selector__tests__snapshot_object_type_child_field_named_pageinfo.snap
---
source: crates/rglint-core/src/selector/tests.rs
expression: "parse(\"ObjectTypeDefinition > FieldDefinition[name.value=PageInfo]\").unwrap()"
---
Child(
    Kind(
        "ObjectTypeDefinition",
    ),
    Not(
        [
            Not(
                [
                    Kind(
                        "FieldDefinition",
                    ),
                ],
            ),
            Not(
                [
                    Attribute {
                        target: NameValue,
                        op: Eq,
                        value: Str(
                            "PageInfo",
                        ),
                    },
                ],
            ),
        ],
    ),
)
